--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@types/node": "^18.0.0",
     "@types/prompt-sync": "^4.1.1",
     "prompt-sync": "^4.2.0"
+  },
+  "scripts": {
+    "start": "tsc && node ./src/js/app/app.js"
   }
 }
